finished mobile first! next up is upscaling for desktop

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <main>
       <!-- Join -->
       <section id="join">
-        <div class="group">
+        <div>
           <img src="images/love.png" alt="ThinkfulCupid - love" />
         </div>
         <!-- Add join form here -->
-        <h2 class="item">Find your perfect match</h2>
+        <h2>Find your perfect match</h2>
         <form>
           <ul>
             <li>
@@ -56,7 +56,7 @@
                 id="password"
                 type="password"
                 name="password"
-                minlength="8"
+                minlength="6"
               />
             </li>
             <li>
